package com.olesmalysh.habitstracker.core.presentation.utils

object TestTags {
    const val CREATE_NEW_HABIT_BUTTON = "CREATE_NEW_HABIT_BUTTON"
    const val CREATE_OWN_HABIT_BUTTON = "CREATE_OWN_HABIT_BUTTON"
    const val HABIT_ITEM = "HABIT_ITEM"
    const val CREATEHABIT_TEXT_FIELD = "CREATEHABIT_TEXT_FIELD"
    const val BUTTON_CREATE_OWN_HABIT_SCREEN = "BUTTON_CREATE_OWN_HABIT_SCREEN"
    const val CUSTOM_CHECK_BOX = "CUSTOM_CHECK_BOX"
}