...
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import com.example.habitstracker.ui.theme.buttonAddNewHabit

@Composable
fun HabitLayout(
    habitName: String = "Health eating",
) {
    Box(
        modifier = Modifier
            .padding(top = 100.dp)
            .clip(RoundedCornerShape(size = 20.dp))
            .height(80.dp)
...
